--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,26 +1,34 @@
 window {
+font: 1.0em "JetBrainsMono Nerd Font", mono;
 margin: 0px;
 border: 2px solid #8ff0a4;
-background-color: #282a36;
+border-radius: 10px;
+background-color: #595959;
 }
 
 #input {
 margin: 5px;
 border: none;
 color: #f8f8f2;
-background-color: #44475a;
+background-color: #505050;
 }
 
 #inner-box {
 margin: 5px;
 border: none;
-background-color: #8ff0a4aa;
+background-color: #595959;
+}
+
+#expander-box {
+margin: 5px;
+border: none;
+background-color: #4c4c4c;
 }
 
 #outer-box {
 margin: 5px;
 border: none;
-background-color: #8ff0a4aa;
+background-color: #595959;
 }
 
 #scroll {
@@ -35,7 +43,7 @@ color: #f8f8f2;
 } 
 
 #entry.activatable #text {
-color: #282a36;
+color: #f8f8f2;
 }
 
 #entry > * {
@@ -43,7 +51,7 @@ color: #f8f8f2;
 }
 
 #entry:selected {
-background-color: #44475a;
+background-color: #505050;
 }
 
 #entry:selected #text {
